--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
+    <div class="container">
     <h1>World Clock</h1>
+    <select>
+      <option value="">Choose city</option>
+      <option value="los-angeles">Los Angeles</option>
+      <option value="mexico-city">Mexico City</option>
+      <option value="sao-paulo">Sao Paulo</option>
+      <option value="cairo">Cairo</option>
+      <option value="mumbai">Mumbai</option>
+      <option value="shanghai">Shanghai</option>
+      <option value="auckland">Auckland</option>
+    </select>
+    <div>
+      New York <span>1:46:42 AM</span>
+    </div>
+    <div>
+      London <span>1:46:42 AM</span>
+    </div>
+    <div>
+      Tokyo <span>1:46:42 AM</span>
+    </div>
+    </div>
     <footer class="footer">
       Open-source
       <a
