--- a/index.html
+++ b/index.html
@@ -19,14 +19,26 @@
       <option value="shanghai">Shanghai</option>
       <option value="auckland">Auckland</option>
     </select>
-    <div>
-      New York <span>1:46:42 AM</span>
+    <div class="city">
+      <div>
+      <h2> New York </h2>
+      <div class="date">August 8th 2023</div>
+      </div>
+      <div class="time">1:46:42 <small>AM</small></div>
     </div>
-    <div>
-      London <span>1:46:42 AM</span>
+    <div class="city">
+      <div>
+     <h2> London </h2>
+      <div class="date">August 8th 2023</div>
+      </div>
+      <div class="time">1:46:42 <small>AM</small></div>
     </div>
-    <div>
-      Tokyo <span>1:46:42 AM</span>
+    <div class="city">
+      <div>
+      <h2> Tokyo </h2>
+      <div class="date">August 8th 2023</div>
+      </div>
+      <div class="time">1:46:42 <small>AM</small></div>
     </div>
     </div>
     <footer class="footer">
