--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Clock</title>
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.js"></script>
   </head>
   <body>
     <div class="container">
@@ -19,26 +21,26 @@
       <option value="shanghai">Shanghai</option>
       <option value="auckland">Auckland</option>
     </select>
-    <div class="city">
+    <div class="city" id="new-york">
       <div>
       <h2> New York </h2>
-      <div class="date">August 8th 2023</div>
+      <div class="date"></div>
       </div>
-      <div class="time">1:46:42 <small>AM</small></div>
+      <div class="time"></div>
     </div>
-    <div class="city">
+    <div class="city" id="london">
       <div>
      <h2> London </h2>
-      <div class="date">August 8th 2023</div>
+      <div class="date"></div>
       </div>
-      <div class="time">1:46:42 <small>AM</small></div>
+      <div class="time"></div>
     </div>
-    <div class="city">
+    <div class="city" id="tokyo">
       <div>
       <h2> Tokyo </h2>
-      <div class="date">August 8th 2023</div>
+      <div class="date"></div>
       </div>
-      <div class="time">1:46:42 <small>AM</small></div>
+      <div class="time"></div>
     </div>
     </div>
     <footer class="footer">
