Dropdown real-time info

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
   <body>
     <div class="container">
     <h1>World Clock</h1>
-    <select>
+    <select id="dropdown">
       <option value="">Choose city</option>
-      <option value="los-angeles">Los Angeles</option>
-      <option value="mexico-city">Mexico City</option>
-      <option value="sao-paulo">Sao Paulo</option>
-      <option value="cairo">Cairo</option>
-      <option value="mumbai">Mumbai</option>
-      <option value="shanghai">Shanghai</option>
-      <option value="auckland">Auckland</option>
+      <option value="America/Los_Angeles">Los Angeles</option>
+      <option value="America/Mexico_City">Mexico City</option>
+      <option value="America/Sao_Paulo">Sao Paulo</option>
+      <option value="Africa/Cairo">Cairo</option>
+      <option value="Asia/Kathmandu">Kathmandu</option>
+      <option value="Asia/Shanghai">Shanghai</option>
+      <option value="Pacific/Auckland">Auckland</option>
     </select>
+    <div id="cities">
     <div class="city" id="new-york">
       <div>
       <h2> New York </h2>
@@ -41,6 +42,7 @@
       <div class="date"></div>
       </div>
       <div class="time"></div>
+    </div>
     </div>
     </div>
     <footer class="footer">
