Added current location

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>World Clock</h1>
     <select id="dropdown">
       <option value="">Choose city</option>
+      <option value="current">My current location</option>
       <option value="America/Los_Angeles">Los Angeles</option>
       <option value="America/Mexico_City">Mexico City</option>
       <option value="America/Sao_Paulo">Sao Paulo</option>
