Final touches of styling

--- a/index.html
+++ b/index.html
@@ -10,51 +10,52 @@
   </head>
   <body>
     <div class="container">
-    <h1>World Clock</h1>
-    <select id="dropdown">
-      <option value="">Choose city</option>
-      <option value="current">My current location</option>
-      <option value="America/Los_Angeles">Los Angeles</option>
-      <option value="America/Mexico_City">Mexico City</option>
-      <option value="America/Sao_Paulo">Sao Paulo</option>
-      <option value="Africa/Cairo">Cairo</option>
-      <option value="Asia/Kathmandu">Kathmandu</option>
-      <option value="Asia/Shanghai">Shanghai</option>
-      <option value="Pacific/Auckland">Auckland</option>
-    </select>
-    <div id="cities">
-    <div class="city" id="new-york">
-      <div>
-      <h2> New York </h2>
-      <div class="date"></div>
+      <h1>World Clock</h1>
+      <select id="dropdown">
+        <option value="">Choose city</option>
+        <option value="current">My current location</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="America/Mexico_City">Mexico City</option>
+        <option value="America/Sao_Paulo">Sao Paulo</option>
+        <option value="Africa/Cairo">Cairo</option>
+        <option value="Asia/Kathmandu">Kathmandu</option>
+        <option value="Asia/Shanghai">Shanghai</option>
+        <option value="Pacific/Auckland">Auckland</option>
+      </select>
+      <div id="cities">
+        <div class="city" id="new-york">
+          <div>
+            <h2>New York</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="london">
+          <div>
+            <h2>London</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="tokyo">
+          <div>
+            <h2>Tokyo</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
-      <div class="time"></div>
+      <footer class="footer">
+        Open-source
+        <a
+          href="https://github.com/kyasikaze/Clock-App"
+          target="_blank"
+          class="foot"
+          >code</a
+        >
+        by kyasikaze
+      </footer>
     </div>
-    <div class="city" id="london">
-      <div>
-     <h2> London </h2>
-      <div class="date"></div>
-      </div>
-      <div class="time"></div>
-    </div>
-    <div class="city" id="tokyo">
-      <div>
-      <h2> Tokyo </h2>
-      <div class="date"></div>
-      </div>
-      <div class="time"></div>
-    </div>
-    </div>
-    </div>
-    <footer class="footer">
-      Open-source
-      <a
-        href="https://github.com/kyasikaze/Clock-App"
-        target="_blank"
-        class="foot"
-        >code</a
-      >
-      by kyasikaze
     <script src="src/script.js"></script>
   </body>
 </html>
